tests/sksl/errors/Ossfuzz32156.glsl
### Compilation failed:

error: 1: expected int literal
1 error
